ansible/playbooks/files/k8s-manifests/nap-e-commerce/hackazon/2.hackazon-services.yaml
## ----------------------------------------------------------------------------
## ..:: Hackazon POD / Service Configuration ::..
##-----------------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: hackazon
  namespace: nap-e-commerce
  labels:
    app: hackazon
spec:
  type: ClusterIP
  ports:
  - name: hackazon-80
    port: 80
    protocol: TCP
  selector:
      app: hackazon
